aligning the codes correctly

--- a/contact.css
+++ b/contact.css
@@ -20,11 +20,21 @@ body {
     background-color: rgb(104, 181, 201);
   }
 
-
+  .container {
+    width: 100% !important;
+  }
 }
 
-@media screen and (max-width: 576px) {
- 
+
+@media screen and (max-width: 480px) {
+
+  .container {
+    width: 100% !important;
+  }
+
+  nav {
+    width: 100% !important;
+  }
 }
 
 .footer {
