--- a/home.css
+++ b/home.css
@@ -33,17 +33,14 @@ h1 {
 
 }
 
-@media screen and (max-width: 576px) {
+@media screen and (max-width: 480px) {
 
   aside {
     width: 100% !important;
-    margin: auto !important;
-  
   }
 
   .container {
     width: 100% !important;
-    margin: auto !important;
   }
 
   nav {
